新增最新消息的圖文

--- a/EnjoyEat/EnjoyEat/Views/Home/News.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Home/News.cshtml
@@ -46,7 +46,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body text-body">
-                            <h5>{{ modalNews.category }}</h5>
+                            <span class="badge badge-secondary">{{ modalNews.category }}</span>
                             <p>{{ modalNews.content }}</p>
                         </div>
                         <div class="modal-footer text-body">
