--- a/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
@@ -31,7 +31,10 @@
     <link href="~/font-awesome/css/v5-font-face.min.css" rel="stylesheet" />
     <!-- Template Main CSS File -->
     <link href="~/css/style.min.css" rel="stylesheet">
-    
+	@*地圖*@
+	<script async
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAK7PxnOc-lyX0bcs8yM5hjx8hdrm0tF9M">
+	</script>
 
 	<!--預設檔案-->
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
