--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
@@ -52,9 +52,17 @@
 		<!-- Sidebar Start -->
 		<div class="sidebar pe-4 pb-3">
 			<nav class="navbar bg-secondary navbar-dark">
-				<a class="navbar-brand mx-4 mb-3">
-					<h3 class="text-primary">享食餐廳</h3>
-				</a>
+				@if (User.Identity.IsAuthenticated && (User.IsInRole("staff") || User.IsInRole("manager")))
+				{
+					<a asp-area="backend" asp-action="Index" asp-controller="BackendHome" class="navbar-brand mx-4 mb-3">
+						<h3 class="text-primary">享食餐廳</h3>
+					</a>
+				}
+
+				else
+				{
+					<a class="navbar-brand mx-4 mb-3"><h3 class="text-primary">享食餐廳</h3></a>
+				}
 				<div class="d-flex align-items-center ms-4 mb-4">
 					<div class="position-relative">
 						<div class="ms-3">
@@ -88,7 +96,7 @@
 					</div>
 					@if (User.Identity.IsAuthenticated && (User.IsInRole("staff") || User.IsInRole("manager")))
 					{
-						<a asp-area="backend" asp-controller="Product" asp-action="Index" class="nav-item nav-link"><i class="fa fa-th me-2"></i>產品管理</a>
+						<a asp-area="backend" asp-controller="Product" asp-action="Index" class="nav-item nav-link"><i class="fa fa-th me-2"></i>餐點管理</a>
 						<a asp-area="backend" asp-controller="EmployeeManagement" asp-action="Index" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>員工管理</a>
 					}
 					<div class="nav-item dropdown">
